# apollo2_nn

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  JLinkLog.txt  README.md  apollo2_nn.uvguix.Ben  apollo2_nn.uvoptx  apollo2_nn.uvprojx  config.c  config.h  data.h  fann_apollo2.uvguix.Ben  fann_apollo2.uvoptx  fann_apollo2.uvprojx  main.c  msp432p401r.cmd  performance.c
.launches/: fpu_simple_floating_point_operation_MSP_EXP432P401R_nortos_ccs.launch  semester-thesis-testbench.launch
Debug/: ccsObjs.opt  config.d  main.d  makefile  performance.d  semester-thesis-testbench.map  semester-thesis-testbench_linkInfo.xml  sources.mk  subdir_rules.mk  subdir_vars.mk  system_msp432p401r.d
Objects/: extraction.crf  extraction.d  fann.crf  fann.d  fann_apollo2.build_log.htm  fann_apollo2_Target 1.dep  loop.crf  loop.d  performance.crf  performance.d
Release/: ccsLinker.opt  ccsObjs.opt  config.d  main.d  makefile  performance.d  semester-thesis-testbench.map  semester-thesis-testbench_linkInfo.xml  sources.mk  subdir_rules.mk  system_msp432p401r.d
ccs/: startup_msp432p401r_ccs.c
data/: emotion_data.c  emotion_data.h  epilepsy_data.c  epilepsy_data.h  fann_data.c  fann_data.h  feature_extraction_data.c  feature_extraction_data.h  stress_data.c  stress_data.h
emotion_fann_generation/: Feedforward_Speech_Emotion_Classification.ipynb  emotion.data  emotion.net  fann_conf.h  fann_net.h  test_data.h
epilepsy_fann_generation/: Feedforward_Epilepsy_ECG_Classification.ipynb  epilepsy.net  fann_conf.h
extraction/: extraction.c  loop.c  loop.h
fann/: fann.c  fann_conf.h  fann_structs.h  test_data.h
fann_generation/: epilepsy_data.c  (+3 more)
(+646 files in other folders)
